--- a/Delay-my-replyMessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Delay-my-replyMessagesExtension/Base.lproj/MainInterface.storyboard
@@ -23,40 +23,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jls-3O-ut6">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="155.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="UBl-Mb-y9q"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Reply in 20 mins"/>
+                                <connections>
+                                    <action selector="twentyMinsTapped:" destination="ObA-dk-sSI" eventType="touchUpInside" id="d6C-Km-9Ee"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tNg-Ff-Qnh">
-                                <rect key="frame" x="0.0" y="156.5" width="375" height="154.5"/>
+                                <rect key="frame" x="0.0" y="53" width="375" height="52"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="q1Q-xd-AZe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Reply in 60 mins"/>
+                                <connections>
+                                    <action selector="sixtyMinsTapped:" destination="ObA-dk-sSI" eventType="touchUpInside" id="TFA-FT-Ls0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fqL-aq-I9g">
-                                <rect key="frame" x="0.0" y="312" width="375" height="155.5"/>
+                                <rect key="frame" x="0.0" y="106" width="375" height="52"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="jbw-6s-g2c"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Reply in 2 hrs"/>
+                                <connections>
+                                    <action selector="twoHoursTapped:" destination="ObA-dk-sSI" eventType="touchUpInside" id="irH-hN-ddN"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aj1-JA-gvu">
-                                <rect key="frame" x="0.0" y="468.5" width="375" height="154.5"/>
+                                <rect key="frame" x="0.0" y="159" width="375" height="52"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Reply Tomorrow"/>
+                                <connections>
+                                    <action selector="twentyFourHoursTapped:" destination="ObA-dk-sSI" eventType="touchUpInside" id="E3n-xk-eH5"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.817037538478249" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jls-3O-ut6" firstAttribute="top" secondItem="qkL-Od-lgU" secondAttribute="bottom" id="571-wP-HSC"/>
                             <constraint firstItem="fqL-aq-I9g" firstAttribute="height" secondItem="jls-3O-ut6" secondAttribute="height" id="6ss-dh-ZJ7"/>
@@ -78,12 +90,6 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
-                    <connections>
-                        <outlet property="sixtyMins" destination="tNg-Ff-Qnh" id="UyB-4B-27x"/>
-                        <outlet property="twentyFourHrs" destination="Aj1-JA-gvu" id="c2q-Ia-44G"/>
-                        <outlet property="twentyMins" destination="jls-3O-ut6" id="6fR-aP-8fX"/>
-                        <outlet property="twoHrs" destination="fqL-aq-I9g" id="ClA-qd-gak"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
